# writeupforge

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  STRUCTURE.md  __init__.py  ai_handler.py  cli.py  input_handler.py  install.py  install.sh  install_linux.sh  main.py  main_gui.py  pdf_generator.py  pyproject.toml  requirements.txt  run.py  setup.py  setup_env.bat  setup_env.sh  spell_grammar_checker.py  spinner.py  uninstall_linux.sh  uninstall_windows.ps1  update_checker.py  version.py  writeup_types.py
config/: .env.template
docs/: CHANGES.md  QUICKSTART.md  README.md
scripts/: install-linux.sh  install-wizard.ps1  install_windows.ps1  launch.bat  launcher.py  setup_env.bat  setup_env.sh  uninstall.bat  uninstall.sh  uninstall_linux.sh
utils/: __init__.py  github_helper.py  linkedin_helper.py
