[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "writeupforge"
version = "1.0.0"
description = "Convert raw cybersecurity lab notes into professional writeups"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "thehusnain"}
]
keywords = ["cybersecurity", "writeup", "markdown", "pdf", "hacking", "pentest"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: Text Processing :: Markup",
    "Development Status :: 4 - Beta",
]
dependencies = [
    "groq>=0.4.0",
    "click>=8.0",
    "reportlab>=4.0",
    "python-dotenv>=1.0",
    "customtkinter>=5.0",
    "pillow>=10.0",
    "requests>=2.28",
]

[project.urls]
Homepage = "https://github.com/thehusnain/WriteupForge"
"Bug Tracker" = "https://github.com/thehusnain/WriteupForge/issues"
Documentation = "https://github.com/thehusnain/WriteupForge"
"Source Code" = "https://github.com/thehusnain/WriteupForge"

[project.scripts]
writeupforge = "cli:main"
fgwrite = "cli:main"

[project.gui-scripts]
writeupforge-gui = "main_gui:run_gui"
